--- a/src/components/menu-category/menu-category.styles.scss
+++ b/src/components/menu-category/menu-category.styles.scss
@@ -9,6 +9,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     place-items: center;
-    margin: 3rem 0;
+    margin: 3rem 0 0 1rem;
   }
 }
