--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -8,6 +8,10 @@
     padding: 0 2rem;
   }
 
+  a {
+    text-decoration: none;
+  }
+
   .navbar-brand {
     color: #fff;
     font-size: 2rem;
@@ -32,6 +36,15 @@
     font-family: 'Oxygen', sans-serif;
     font-size: 1.5rem;
     color: #fff;
+    margin: .5rem;
+  }
+
+  .links { 
+    text-decoration: none;
+  }
+
+  .links:hover {
+    color: #96304c;
   }
 
   .dropdown-menu {
